Fix post navigation order and alignment

--- a/css/main.css
+++ b/css/main.css
@@ -863,6 +863,7 @@ main {
 
 .post-nav-next {
   text-align: right;
+  margin-left: auto;
 }
 
 /* ====================
